--- a/appdir/realestateproject/clientsApp/templates/navbar.html
+++ b/appdir/realestateproject/clientsApp/templates/navbar.html
@@ -13,9 +13,6 @@
                 <li class="nav-item">
                     <a style="color: #fff;" class="nav-link" href="{%url 'homepage'%}">Home<span class="sr-only">(current)</span></a>
                 </li>
-                <!-- <li class="nav-item">
-                    <a style="color: #fff;" class="nav-link" href="{%url 'projects'%}">WishList<span class="sr-only">(current)</span></a>
-                </li> -->
             </ul>
             <span class="navbar-text dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
@@ -33,8 +30,8 @@
 </div>
 </nav>
 <nav class="navbar navbar-dark" style="background-color: #000">
-    <form action="{% url 'searchProject' %}" class="form-inline ">
-        <input class="form-control mr-sm-3" name='project' type="search" placeholder="Search Project Title" aria-label="Search">
+    <form action="" class="form-inline ">
+        <input class="form-control mr-sm-3" name='project' type="search" placeholder="Search listings" aria-label="Search">
         <button class="btn btn-outline-success my-0 my-sm-0" type="submit">Search</button>
     </form>
 </nav>
