--- a/nyumba_project/nyumba/templates/base-app/home.html
+++ b/nyumba_project/nyumba/templates/base-app/home.html
@@ -12,32 +12,78 @@
 
                         <h1 class="hero-title text-white mt-2 mb-4">Find the dream home you've been looking for</h1>
 
-                        <form class="custom-form hero-form" action="#" method="get" role="form">
+                        <form class="custom-form hero-form" action="predict" method="GET" role="form">
+                            {% csrf_token %}
                             <div class="row">
                                 <div class="col-lg-5 col-md-6 col-12">
                                     <div class="input-group align-items-center">
-                                        <label for="product-name">Product</label>
+                                        <label for="product-name">Category</label>
 
-                                        <input type="text" name="product-name" id="product-name" class="form-control" placeholder="Bathroom, Living Room..." required>
-                                    </div>
-                                </div>
-
-                                <div class="col-lg-5 col-md-6 col-12">
-                                    <div class="input-group align-items-center">
-                                        <label for="last-name">Price</label>
-
-                                        <select name="price-range" class="form-select form-control" id="price-range" aria-label="Default select example">
-                                            <option value="500" selected>$500 to $990</option>
-                                            <option value="1000">$1,000 - 2,900</option>
-                                            <option value="3000">$3,000 - 5,000</option>
-                                            <option value="5000">$5,000 - 10,000</option>
-                                            <option value="11000">$11,000 - 25,000</option>
+                                        <select id="category" name="category" class="form-control" required>
+                                            <option value="apartment">Apartment</option>
+                                            <option value="villa">Villa</option>
+                                            <option value="townlouse">Townhouse</option>
+                                            <option value="bungalow">Bungalow</option>
+                                            <option value="other">Other</option>
                                         </select>
                                     </div>
                                 </div>
 
+                                <div class="col-lg-5 col-md-6 col-12">
+                                    <div class="input-group align-items-center">
+                                        <label for="last-name">Location</label>
+
+                                        <select name="price-range" class="form-select form-control" id="price-range" aria-label="Default select example">
+                                            <option value="Gigiri Suburb">Gigiri Suburb</option>
+                                            <option value="Karen">Karen</option>
+                                            <option value="Kamakis, Ruiru">Kamakis, Ruiru</option>
+                                            <option value="Kayole Estate">Kayole Estate</option>
+                                            <option value="Kiambu Road">Kiambu Road</option>
+                                            <option value="Kitengela">Kitengela</option>
+                                            <option value="Kitisuru">Kitisuru</option>
+                                            <option value="Kisumu">Kisumu</option>
+                                            <option value="Kyuna, Westlands">Kyuna, Westlands</option>
+                                            <option value="Langata">Langata</option>
+                                            <option value="Lavington">Lavington</option>
+                                            <option value="Lavington Green">Lavington Green</option>
+                                            <option value="Membley, Ruiru">Membley, Ruiru</option>
+                                            <option value="Mimosa">Mimosa</option>
+                                            <option value="Mountain View, Westlands">Mountain View, Westlands</option>
+                                            <option value="Mombasa Road, Syokimau">Mombasa Road, Syokimau</option>
+                                            <option value="Nammanga Road, Kitengela">Nammanga Road, Kitengela</option>
+                                            <option value="Naivasha Road">Naivasha Road</option>
+                                            <option value="Ngong">Ngong</option>
+                                            <option value="Old Runda">Old Runda</option>
+                                            <option value="Rosslyn, Westlands">Rosslyn, Westlands</option>
+                                            <option value="Ruiru">Ruiru</option>
+                                            <option value="Ruiru - Githunguri Road">Ruiru - Githunguri Road</option>
+                                            <option value="Thika">Thika</option>
+                                            <option value="Thika Greens Estate">Thika Greens Estate</option>
+                                            <option value="Tigoni, Limuru">Tigoni, Limuru</option>
+                                            <option value="Windsor, Roysambu">Windsor, Roysambu</option>
+
+                                        </select>
+                                    </div>
+                                </div>
+
+                                <div class="col-lg-5 col-md-6 col-12">
+                                    <div class="input-group align-items-center">
+                                        <label for="last-name">Bedrooms</label>
+
+                                        <input type="number" class="form-control" name="beds" id="beds" required>
+                                    </div>
+                                </div>
+
+                                <div class="col-lg-5 col-md-6 col-12">
+                                    <div class="input-group align-items-center">
+                                        <label for="last-name">Bathrooms</label>
+
+                                        <input type="number" class="form-control" name="baths" id="baths" required>
+                                    </div>
+                                </div>
+
                                 <div class="col-lg-2 col-md-6 col-12">
-                                    <button type="submit" class="form-control">Search</button>
+                                    <button type="submit" class="form-control">Determine Price</button>
                                 </div>
                             </div>
                         </form>
