--- a/nyumba_project/nyumba/templates/registration/base.html
+++ b/nyumba_project/nyumba/templates/registration/base.html
@@ -1,23 +1,51 @@
-{% load bootstrap3 %} {% load static %}
-<!DOCTYPE html>
+{% load bootstrap3 %} {% load static%}
+
+
+<!-- Experimental  -->
+<!doctype html>
 <html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KenHomesInspo | Accounts</title>
+        <meta name="description" content="">
+        <meta name="author" content="Tooplate">
 
-    {% block styles %}
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous"> {% endblock %}
-</head>
+        {% if title %}
+    <title>KenHomes - {{title}}</title>
+    {% else %}
+    <title> Kenya Homes Insight </title>
+    {% endif %}
 
-<body>
+        <!-- CSS FILES -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-    {% block content %} {% endblock %} {% block scripts %}
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    {% bootstrap_javascript %} {% endblock %}
-</body>
+        <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100;300;400;600;700&display=swap" rel="stylesheet">
 
-</html>
+        <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+
+        <link href="{% static 'css/bootstrap-icons.css' %}" rel="stylesheet">
+
+        <link href="{% static 'css/owl.carousel.min.css' %}" rel="stylesheet">
+
+        <link href="{% static 'css/tooplate-moso-interior.css' %}" rel="stylesheet">
+        
+
+    </head>
+
+    <body>
+        {% include "navbar.html" %} {% block content %} {%endblock%} {% block scripts %}
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="{% static 'js/jquery.min.js' %}"></script>
+        <script src="{% static 'js/bootstrap.min.js' %}"></script>
+        <script src="{% static 'js/click-scroll.js' %}"></script>
+        <script src="{% static 'js/jquery.backstretch.min.js' %}"></script>
+        <script src="{% static 'js/owl.carousel.min.js' %}"></script>
+        <script src="{% static 'js/custom.js' %}"></script>
+        
+        {% bootstrap_javascript %} {% endblock %}
+    </body>
+    
+    </html>
