This commit integrates the predict view, incorporates the shop_detail template and url

--- a/nyumba_project/nyumba/templates/base-app/home.html
+++ b/nyumba_project/nyumba/templates/base-app/home.html
@@ -33,7 +33,7 @@
                                     <div class="input-group align-items-center">
                                         <label for="last-name">Location</label>
 
-                                        <select name="price-range" class="form-select form-control" id="price-range" aria-label="Default select example">
+                                        <select name="location" class="form-select form-control" id="price-range" aria-label="Default select example">
                                             <option value="Gigiri Suburb">Gigiri Suburb</option>
                                             <option value="Karen">Karen</option>
                                             <option value="Kamakis, Ruiru">Kamakis, Ruiru</option>
@@ -83,11 +83,13 @@
                                 </div>
 
                                 <div class="col-lg-2 col-md-6 col-12">
-                                    <button type="submit" class="form-control">Determine Price</button>
+                                    <button type="submit" class="form-control">Price</button>
                                 </div>
                             </div>
                         </form>
-
+                        <br>
+                        <br>
+                        <br>
                         <div class="hero-btn d-flex justify-content-center align-items-center">
                             <a class="bi-arrow-down hero-btn-link smoothscroll" href="#section_2"></a>
                         </div> 
