--- a/nyumba_project/nyumba/templates/navbar.html
+++ b/nyumba_project/nyumba/templates/navbar.html
@@ -62,7 +62,7 @@
                     <a class="nav-link dropdown-toggle click-scroll" href="#section_3" id="navbarLightDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
 
                     <ul class="dropdown-menu dropdown-menu-light" aria-labelledby="navbarLightDropdownMenuLink">
-                        <li><a class="dropdown-item" href="shop-listing.html">Shop Listing</a></li>
+                        <li><a class="dropdown-item" href="{% url 'predict' %}">Shop Listing</a></li>
 
                         <li><a class="dropdown-item" href="shop-detail.html">Shop Detail</a></li>
                     </ul>
