--- a/nyumba_project/nyumba/templates/base-app/home.html
+++ b/nyumba_project/nyumba/templates/base-app/home.html
@@ -260,14 +260,14 @@
         <div class="row">
 
             <div class="col-lg-3 col-md-5 col-12 mb-3">
-                <h3><a href="index.html" class="custom-link mb-1">KenHomesInsight</a></h3>
+                <h3><a href="{% url 'home' %}" class="custom-link mb-1">KenHomesInsight</a></h3>
 
                 <p class="text-white">With decades of expertise and a deep understanding of the local market, we pride ourselves on our commitment to integrity, and professionalism.</p>
                 
             </div>
 
             <div class="col-lg-3 col-md-3 col-12 ms-lg-auto mb-3">
-                <h3 class="text-white mb-3">Store</h3>
+                <h3 class="text-white mb-3">Office</h3>
 
                 <p class="text-white mt-2">
                     <i class="bi-geo-alt"></i>
