--- a/nyumba_project/nyumba/templates/base-app/shop-listing.html
+++ b/nyumba_project/nyumba/templates/base-app/shop-listing.html
@@ -55,119 +55,11 @@
                         <div class="col-lg-6 col-12">
                             <div class="shop-thumb">
                                 <div class="shop-image-wrap">
-                                    <a href="shop-detail.html">
-                                        <img src="images/shop/minimal-bathroom-interior-design-with-wooden-furniture.jpg" class="shop-image img-fluid" alt="">
-                                    </a>
-
-                                    <div class="shop-icons-wrap">
-                                        <div class="shop-icons d-flex flex-column align-items-center">
-                                            <a href="#" class="shop-icon bi-heart"></a>
-
-                                            <a href="#" class="shop-icon bi-bookmark"></a>
-                                        </div>
-
-                                        <p class="shop-pricing mb-0 mt-3">
-                                            <span class="badge custom-badge">$8,200</span>
-                                        </p>
-                                    </div>
-
-                                    <div class="shop-btn-wrap">
-                                        <a href="shop-detail.html" class="shop-btn custom-btn btn d-flex align-items-center align-items-center">Learn more</a>
-                                    </div>
-                                </div>
-
-                                <div class="shop-body">
-                                    <h4>Bathroom</h4>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-6 col-12">
-                            <div class="shop-thumb">
-                                <div class="shop-image-wrap">
-                                    <a href="shop-detail.html">
-                                        <img src="images/shop/mock-up-poster-modern-dining-room-interior-design-with-white-empty-wall.jpg" class="shop-image img-fluid" alt="">
-                                    </a>
-
-                                    <div class="shop-icons-wrap">
-                                        <div class="shop-icons d-flex flex-column align-items-center">
-                                            <a href="#" class="shop-icon bi-heart"></a>
-
-                                            <a href="#" class="shop-icon bi-bookmark"></a>
-                                        </div>
-
-                                        <p class="shop-pricing mb-0 mt-3">
-                                            <span class="badge custom-badge">$4,800</span>
-                                        </p>
-                                    </div>
-
-                                    <div class="shop-btn-wrap">
-                                        <a href="shop-detail.html" class="shop-btn custom-btn btn d-flex align-items-center align-items-center">Learn more</a>
-                                    </div>
+                                    <iframe src="{% static 'map.html' %}" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" width="100%" height="400"></iframe>
                                 </div>
 
                                 <div class="shop-body">
                                     <h4>Dining</h4>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-6 col-12">
-                            <div class="shop-thumb">
-                                <div class="shop-image-wrap">
-                                    <a href="shop-detail.html">
-                                        <img src="images/shop/green-sofa-white-living-room-with-blank-table-mockup.jpg" class="shop-image img-fluid" alt="">
-                                    </a>
-
-                                    <div class="shop-icons-wrap">
-                                        <div class="shop-icons d-flex flex-column align-items-center">
-                                            <a href="#" class="shop-icon bi-heart"></a>
-
-                                            <a href="#" class="shop-icon bi-bookmark"></a>
-                                        </div>
-
-                                        <p class="shop-pricing mb-0 mt-3">
-                                            <span class="badge custom-badge">$2,400</span>
-                                        </p>
-                                    </div>
-
-                                    <div class="shop-btn-wrap">
-                                        <a href="shop-detail.html" class="shop-btn custom-btn btn d-flex align-items-center align-items-center">Learn more</a>
-                                    </div>
-                                </div>
-
-                                <div class="shop-body">
-                                    <h4>Living Room</h4>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-6 col-12">
-                            <div class="shop-thumb">
-                                <div class="shop-image-wrap">
-                                    <a href="shop-detail.html">
-                                        <img src="images/shop/concept-home-cooking-with-female-chef.jpg" class="shop-image img-fluid" alt="">
-                                    </a>
-
-                                    <div class="shop-icons-wrap">
-                                        <div class="shop-icons d-flex flex-column align-items-center">
-                                            <a href="#" class="shop-icon bi-heart"></a>
-
-                                            <a href="#" class="shop-icon bi-bookmark"></a>
-                                        </div>
-
-                                        <p class="shop-pricing mb-0 mt-3">
-                                            <span class="badge custom-badge">$6,500</span>
-                                        </p>
-                                    </div>
-
-                                    <div class="shop-btn-wrap">
-                                        <a href="shop-detail.html" class="shop-btn custom-btn btn d-flex align-items-center align-items-center">Learn more</a>
-                                    </div>
-                                </div>
-
-                                <div class="shop-body">
-                                    <h4>Chef Kitchen</h4>
                                 </div>
                             </div>
                         </div>
