--- a/nyumba_project/nyumba/templates/base-app/home.html
+++ b/nyumba_project/nyumba/templates/base-app/home.html
@@ -20,11 +20,11 @@
                                         <label for="product-name">Category</label>
 
                                         <select id="category" name="category" class="form-control" required>
-                                            <option value="apartment">Apartment</option>
-                                            <option value="villa">Villa</option>
-                                            <option value="townlouse">Townhouse</option>
-                                            <option value="bungalow">Bungalow</option>
-                                            <option value="other">Other</option>
+                                            <option value="Apartment">Apartment</option>
+                                            <option value="Villa">Villa</option>
+                                            <option value="Townhouse">Townhouse</option>
+                                            <option value="Bungalow">Bungalow</option>
+                                            <option value="Other">Other</option>
                                         </select>
                                     </div>
                                 </div>
@@ -55,11 +55,13 @@
                                             <option value="Ngong">Ngong</option>
                                             <option value="Old Runda">Old Runda</option>
                                             <option value="Rosslyn, Westlands">Rosslyn, Westlands</option>
+                                            <option value="Runda">Runda</option>
                                             <option value="Ruiru">Ruiru</option>
                                             <option value="Ruiru - Githunguri Road">Ruiru - Githunguri Road</option>
                                             <option value="Thika">Thika</option>
                                             <option value="Thika Greens Estate">Thika Greens Estate</option>
                                             <option value="Tigoni, Limuru">Tigoni, Limuru</option>
+                                            <option value="Westlands">Westlands</option>
                                             <option value="Windsor, Roysambu">Windsor, Roysambu</option>
 
                                         </select>
@@ -271,7 +273,7 @@
 
                 <p class="text-white mt-2">
                     <i class="bi-geo-alt"></i>
-                    Nairobi, Kenya
+                    31 Kiambere Road, Nairobi
                 </p>
             </div>
 
