--- a/nyumba_project/nyumba/templates/base-app/shop-listing.html
+++ b/nyumba_project/nyumba/templates/base-app/shop-listing.html
@@ -20,8 +20,8 @@
     <section class="shop-section section-padding">
         <div class="container">
             <div class="row">
-
-                <div class="col-lg-4 col-md-5 col-12 me-auto mb-5">
+    
+                <div class="col-lg-4 col-md-4 col-12 mb-5">
                     <div class="">
                         <h4 class="filter-form-small-title">Results</h4>
                     </div>
@@ -41,67 +41,69 @@
                         <h5 class="filter-form-small-title">The estimated price is: {{ predicted_price }}</h5>
                     </div>
                     <div class="mt-4">
-                        <a href="{% url 'home' %}" class="form-control">Go Back</a>
+                        <a href="{% url 'home' %}" class="btn btn-danger form-control">Go Back</a>
                     </div>
                 </div>
-
-                <div class="col-lg-7 col-md-6 col-12">
+    
+                <div class="col-lg-4 col-md-4 col-12 mb-5">
+                    <h3>Top Properties</h3>
+                    <div class="shop-thumb">
+                        <div class="shop-image-wrap">
+                            <iframe src="{% static 'map.html' %}" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" width="100%" height="400"></iframe>
+                        </div>
+                    </div>
+                </div>
+    
+                <div class="col-lg-4 col-md-4 col-12">
                     <h3>Similar Listings</h3>
-
-                    <p class="mb-5"><strong>3,648 items</strong> are currently available</p>
-
+                    <!-- <p class="mb-5"><strong>3,648 items</strong> are currently available</p> -->
+    
                     <div class="row">
-
-                        <div class="col-lg-6 col-12">
-                            <div class="shop-thumb">
-                                <div class="shop-image-wrap">
-                                    <iframe src="{% static 'map.html' %}" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" width="100%" height="400"></iframe>
-                                </div>
-
-                                <div class="shop-body">
-                                    <h4>Dining</h4>
+                        {% for listing in listings %}
+                            <div class="col-lg-12 col-md-12 col-12 mb-4">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <!-- <h3 class="card-title">{{ listing.title }}</h3> -->
+                                        <p class="card-text">Location: {{ listing.location }}</p>
+                                        <p class="card-text">Category: {{ listing.category }}</p>
+                                        <p class="card-text">Beds: {{ listing.beds }}</p>
+                                        <p class="card-text">Baths: {{ listing.baths }}</p>
+                                        <p class="card-text">Price: {{ listing.price }}</p>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-
-                        <nav aria-label="Page navigation example">
-                            <ul class="pagination justify-content-center">
-                                <li class="page-item">
-                                    <a class="page-link" href="#" aria-label="Previous">
-                                        <span aria-hidden="true">&laquo;</span>
-                                    </a>
-                                </li>
-
-                                <li class="page-item active" aria-current="page">
-                                    <a class="page-link" href="#">1</a>
-                                </li>
-                                
-                                <li class="page-item">
-                                    <a class="page-link" href="#">2</a>
-                                </li>
-                                
-                                <li class="page-item">
-                                    <a class="page-link" href="#">3</a>
-                                </li>
-
-                                <li class="page-item">
-                                    <a class="page-link" href="#">4</a>
-                                </li>
-
-                                <li class="page-item">
-                                    <a class="page-link" href="#">5</a>
-                                </li>
-                                
-                                <li class="page-item">
-                                    <a class="page-link" href="#" aria-label="Next">
-                                        <span aria-hidden="true">&raquo;</span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </nav>
+                        {% endfor %}
+    
+                        {% if listings|length == 0 %}
+                            <div class="col-12">
+                                <p>No listings found within the specified price range.</p>
+                            </div>
+                        {% endif %}
                     </div>
+    
                 </div>
+                <nav aria-label="Page navigation example">
+                    <ul class="pagination justify-content-center">
+                        <li class="page-item">
+                            <a class="page-link" href="#" aria-label="Previous">
+                                <span aria-hidden="true">&laquo;</span>
+                            </a>
+                        </li>
 
+                        <li class="page-item active" aria-current="page">
+                            <a class="page-link" href="#">1</a>
+                        </li>
+
+                        <li class="page-item">
+                            <a class="page-link" href="#">2</a>
+                        </li>
+
+                        <li class="page-item">
+                            <a class="page-link" href="#">3</a>
+                        </li>
+                    </ul>
+                </nav>
+    
             </div>
         </div>
     </section>
@@ -125,7 +127,7 @@
 
                 <p class="text-white mt-2">
                     <i class="bi-geo-alt"></i>
-                    Nairobi, Kenya
+                    31 Kiambere Road, Nairobi
                 </p>
             </div>
 
