--- a/nyumba_project/nyumba/templates/navbar.html
+++ b/nyumba_project/nyumba/templates/navbar.html
@@ -12,7 +12,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link click-scroll" href="#section_1">Home</a>
+                    <a class="nav-link click-scroll" href="{% url 'home' %}">Home</a>
                 </li>
 
                 <li class="nav-item">
@@ -23,7 +23,7 @@
                     <a class="nav-link dropdown-toggle click-scroll" href="#section_3" id="navbarLightDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">Explore</a>
 
                     <ul class="dropdown-menu dropdown-menu-light" aria-labelledby="navbarLightDropdownMenuLink">
-                        <li><a class="dropdown-item" href="{% url 'predict' %}">House Listing</a></li>
+                        <li><a class="dropdown-item" href="{% url 'home' %}">House Listing</a></li>
 
                         <li><a class="dropdown-item" href="shop-detail.html">Shop Detail</a></li>
                     </ul>
@@ -34,7 +34,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link click-scroll" href="#section_5">Contact</a>
+                    <a class="nav-link click-scroll" href="{% url 'contact' %}">Contact</a>
                 </li>
             </ul>
         </div>
