--- a/nyumba_project/nyumba/templates/base-app/base.html
+++ b/nyumba_project/nyumba/templates/base-app/base.html
@@ -44,6 +44,8 @@
         <script src="{% static 'js/jquery.backstretch.min.js' %}"></script>
         <script src="{% static 'js/owl.carousel.min.js' %}"></script>
         <script src="{% static 'js/custom.js' %}"></script>
+        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+        <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
         
         {% bootstrap_javascript %} {% endblock %}
     </body>
