--- a/nyumba_project/nyumba/templates/base-app/home.html
+++ b/nyumba_project/nyumba/templates/base-app/home.html
@@ -117,7 +117,7 @@
                 </div>
 
                 <div class="col-lg-3 col-md-5 col-5 mx-lg-auto">
-                    <img src="{% static 'images/sharing-design-ideas-with-family.jpg' %}" class="about-image about-image-small img-fluid" alt="">
+                    <img src="{% static 'images/hillshire-farm.jpg' %}" class="about-image about-image-small img-fluid" alt="">
                 </div>
 
                 <div class="col-lg-4 col-md-7 col-7">
